@@ -151,6 +151,12 @@ parse ended.
   &gt;
 </pre>
 </p>
+<p><span class="fndoclabel">REPL Note</span> <br /><a name="id1">The</a> equivalent of:
+<pre class="pretop">
+  (print (<a href="ref-encode-date-and-time.html">encode-date-and-time</a> <var>string</var>))
+</pre> 
+can be invoked using the <a href="ref-glossary.html#id198">REPL&nbsp;command</a> <nobr><code>:ut</code> <var>string</var></nobr>.
+</p>
 <hr /><address><a target="_top" class="address"
     href="http://GBBopen.org/"><p>The GBBopen Project</a></address><br />
 <table width="100%" cellpadding="0" cellspacing="2"><tr>
