@@ -265,9 +265,8 @@ The date and time 125 days ago (with seconds):
 </p>
 <p><span class="fndoclabel">REPL Note</span> <br /><a name="id3">The</a> equivalent of:
 <pre class="pretop">
-  (<a href="ref-full-date-and-time.html">full-date-and-time</a> <var>universal-time</var> 
-     :include-seconds 't
-     :destination *standard-output*)
+  (print (<a href="ref-full-date-and-time.html">full-date-and-time</a> <var>universal-time</var> 
+            :include-seconds 't))
 </pre> 
 can be invoked using the <a href="ref-glossary.html#id198">REPL&nbsp;command</a> <nobr><code>:ut</code> <var>universal-time</var></nobr>.
 </p>
