@@ -558,6 +558,7 @@ example of the use of that entity.
 , <a href="ref-next-class-instance-number.html#id2"><font color="#007f00"><i>278</i></font></a>
 , <a href="ref-reset-unit-class.html#id1"><font color="#007f00"><i>279</i></font></a>
 <br /><b>:ut</b> REPL command, 
+<a href="ref-encode-date-and-time.html#id1">128</a>, 
 <a href="ref-full-date-and-time.html#id3">130</a><br /><code>=</code> (path-expression match character), 
 <a href="ref-add-event-function.html#id3">298</a>, 
 <a href="ref-describe-event-printing.html#id4">300</a>, 
@@ -636,10 +637,10 @@ example of the use of that entity.
 <a href="ref-pseudo-probability-entities.html#id1">113</a><br /><b>&#37;</b>, 
 <a href="ref-pseudo-probability-entities.html#id1">113</a><br /><b>1-&#36;&#36;&#36;</b>, 
 <a href="ref-long-float-operators.html">112</a><br /><b>1+&#36;&#36;&#36;</b>, 
-<a href="ref-long-float-operators.html">112</a><br /><b>&#36;&#36;&#36;</b>, 
+<a href="ref-long-float-operators.html">112</a><br /><b>&#36;&#36;</b>, 
+<a href="ref-double-float-operators.html">111</a><br /><b>&#36;&#36;&#36;</b>, 
 <a href="ref-long-float-operators.html">112</a><br /><b>1-&#36;&#36;</b>, 
 <a href="ref-double-float-operators.html">111</a><br /><b>1+&#36;&#36;</b>, 
-<a href="ref-double-float-operators.html">111</a><br /><b>&#36;&#36;</b>, 
 <a href="ref-double-float-operators.html">111</a><br /><b>1-&#36;</b>, 
 <a href="ref-single-float-operators.html">110</a><br /><b>1+&#36;</b>, 
 <a href="ref-single-float-operators.html">110</a><br /><b>&#36;</b>, 
@@ -2893,6 +2894,7 @@ package
 <a href="ref-map-instances-of-class.html#id3">365</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:systems</b> (Show all systems), <i>see</i> the GBBopen Tutorial
 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:undefine-system</b> (Undefine a system), <i>see</i> the GBBopen Tutorial
 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:ut</b>, 
+<a href="ref-encode-date-and-time.html#id1">128</a>, 
 <a href="ref-full-date-and-time.html#id3">130</a><br />REPL, top-level (keyword) commands, 
 <a href="ref-starting-up.html#id2">4</a>, 
 <a href="ref-starting-up.html#id3">4</a><br /><b>report-find-stats</b>, 
